--- a/_posts/2019-07-18-shout.md
+++ b/_posts/2019-07-18-shout.md
@@ -2,7 +2,7 @@
 layout: post-right-sidebar
 title:  "Shout"
 categories: [ featured, newsletter ]
-image: assets/images/2.jpg
+image: assets/images/2019-07-01-shout.jpg
 featured: true
 ---
 
@@ -13,7 +13,7 @@ place to go if you’re struggling to cope and you need immediate help.
 people from crisis to calm every single day. 'The anonymous data we collate gives us unique 
 insights into mental health trends to help improve people’s lives'. 
 
-If you’re experiencing a personal crisis, are unable to cope and need support, text Shout to [85258](text:85258). 
+If you’re experiencing a personal crisis, are unable to cope and need support, text Shout to [85258](text:85258). For more details see [https://www.giveusashout.org](https://www.giveusashout.org) <br>
 <span style="color:red"> BUT - if your life is in imminent danger, call [999](tel:999)  </span>. <br>
 We can help with urgent issues such as: 
 
